# Plugins

./: README.md
qExametricst/: CMakeLists.txt  ccExaLog.cpp  ccExaLog.h  ccExaWorker.cpp  ccExaWorker.h  ccExametrics.cpp  ccExametrics.h  ccExametricsDialog.cpp  ccExametricsDialog.h  exametricsDialog.ui  info.json  qExametrics.qrc  utils.cpp  utils.h
qExametricst/scripts/: exa.py
